the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
  namespace: project
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: mypvc
        - name: postgres-information
          configMap:
            name: postgres-configmap
      containers:
        - name: fetchapp
          image: PROJECT/FETCHAPP
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/images
        - name: backend
          image: PROJECT/BACKEND
          imagePullPolicy: Always
