the_project/manifests/backendService.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: LoadBalancer
  selector:
    app: todoapp
  ports:
    - port: 7892
      protocol: TCP
      targetPort: 3011
