the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
spec:
  type: NodePort
  selector:
    app: todoapp
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 3001
