the_project/manifests/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: fetchapp-svc
spec:
  type: LoadBalancer
  selector:
    app: todoapp
  ports:
    - port: 9872
      protocol: TCP
      targetPort: 3010
