the_project/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres2
spec:
  selector:
    matchLabels:
      app: postgres2
  serviceName: postgres2
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres2
    spec:
     
      containers:
        - name: postgres2
          image: postgres
          ports:
          - name: postgres
            containerPort: 5432
          volumeMounts:
          - name: data2
            mountPath: /var/lib/postgresql
  volumeClaimTemplates:
  - metadata:
      name: data2
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: postgres2
  labels:
    app: postgres2
spec:
  ports:
    - name: postgres2
      port: 5432
  clusterIP: None
  selector:
    app: postgres2
