the_project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-todoapp
  namespace: project
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fetchapp-svc
                port:
                  number: 9872
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 7892
